Updated component properties to include all of the possible componentes

--- a/res/Components.properties
+++ b/res/Components.properties
@@ -1,5 +1,21 @@
 ImageFile = Image File
 ObjectName = Object Name
-Test1 = Test1
-Test2 = Test2
-Test3 = Test3
+Width = Width
+Height = Height
+ZIndex = Z-Index
+XAccelerationEnvironment = X-Acceleration Modifier
+YAccelerationEnvironment = Y-Acceleration Modifier
+VelocityDampener = Velocity Dampener
+Friction = Friction
+Health = Health
+MaxHealth = Max Health
+Impassable = Impassable
+JumpVelocity = Jump Velocity
+XVelocity = Object X-Velocity
+YVeloctiy = Object Y-Velocity
+XAcceleration = Object X-Acceleration
+YAcceleration = Object Y-Acceleration
+Angle = Object Angle
+MovementVelocityX = Movement X-Velocity
+MovementVelocityY = Movement Y-Velocity
+Type = Type
