--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
         <artifactId>jaxb-api</artifactId>
         <version>2.3.1</version>
     </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.5</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 
 <build>
